--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ checkButton.addEventListener('click', butotnClick);
  <p id="button2"></p>
 <div id="test">
 <input hidden type="button" value="受け取る" id="button2">
-<img hidden src="ticket.png" id="ticketIMG"  align="left"></div>
+<img hidden src="https://github.com/tenbel1234/umekichi_zugai/blob/main/ticket.PNG?raw=true" id="ticketIMG"  align="left"></div>
  
 
      <script>
